# Aegis2.0

aegis-backend/: .env  Cargo.toml  Dockerfile  docker-compose.yml  test_api.sh  upload-test.html
aegis-backend/.cargo/: config.toml
aegis-backend/localstack/cache/: machine.json  server.test.pem  server.test.pem.crt  server.test.pem.key
aegis-backend/localstack/state/dynamodb/: shared-local-instance.db
aegis-backend/migrations/postgres/: 001_initial_schema.sql
aegis-backend/src/: lib.rs  main.rs
aegis-backend/src/config/: aws.rs  database.rs  mod.rs  settings.rs
aegis-backend/src/handlers/: auth.rs  chat.rs  communities.rs  mod.rs  players.rs  post.rs  tournaments.rs  uploads.rs
aegis-backend/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs
aegis-backend/src/migration/: cli.rs  m20240101_000001_initial.rs  mod.rs
aegis-backend/src/models/: enums.rs  mod.rs  user_context.rs
aegis-backend/src/models/dynamodb/: activity.rs  chat.rs  community.rs  entity.rs  mod.rs  post.rs
aegis-backend/src/models/postgres/: admin.rs  api_key.rs  audit_log.rs  battle.rs  mod.rs  organization.rs  player.rs  player_game_stats.rs  rate_limit.rs  reward.rs  team.rs  tournament.rs  tournament_team.rs  tournament_team_invite.rs  (+2 more)
aegis-backend/src/repositories/: chat_repository.rs  community_repository.rs  dynamodb_repository.rs  mod.rs  post_repository.rs
aegis-backend/src/routes/: api.rs  mod.rs
aegis-backend/src/scripts/: mod.rs  setup_dynamodb.rs  setup_s3.rs
aegis-backend/src/services/: admin_service.rs  api_key_service.rs  audit_service.rs  auth_service.rs  battle_service.rs  chat_service.rs  community_service.rs  email_service.rs  localstack_monitor.rs  mod.rs  organization_service.rs  player_game_stats_service.rs  player_service.rs  post_service.rs  rate_limit_service.rs  reward_service.rs  s3_service.rs  session_service.rs  team_service.rs  tournament_service.rs  tournament_team_invite_service.rs  tournament_team_service.rs  transaction_service.rs
aegis-backend/src/utils/: errors.rs  mod.rs  validation.rs
